@@ -23,8 +23,9 @@ SOFTWARE.
  */
 package de.amr.games.pacman.ui.fx.shell.info;
 
+import static de.amr.games.pacman.lib.TickTimer.ticksAsString;
+
 import de.amr.games.pacman.controller.common.GameState;
-import de.amr.games.pacman.lib.TickTimer;
 import de.amr.games.pacman.model.common.GameModel;
 import de.amr.games.pacman.model.common.GameVariant;
 import de.amr.games.pacman.ui.fx.shell.GameUI;
@@ -49,105 +50,95 @@ public class SectionGame extends Section {
 	private CheckBox cbAutopilot;
 	private CheckBox cbImmunity;
 
+	private static String fmtSpeed(float fraction) {
+		return String.format("%.2f px/sec", GameModel.BASE_SPEED * fraction);
+	}
+
 	public SectionGame(GameUI ui, String title, int minLabelWidth, Color textColor, Font textFont, Font labelFont) {
 		super(ui, title, minLabelWidth, textColor, textFont, labelFont);
 
-		var game = gameController.game();
-		var gameState = gameController.state();
-		var gameVariant = gameController.gameVariant();
-
 		comboGameVariant = addComboBox("Game Variant", GameVariant.MS_PACMAN, GameVariant.PACMAN);
 		comboGameVariant.setOnAction(e -> {
-			if (comboGameVariant.getValue() != gameVariant) {
-				gameController.selectGameVariant(comboGameVariant.getValue());
+			if (comboGameVariant.getValue() != gc.gameVariant()) {
+				gc.selectGameVariant(comboGameVariant.getValue());
 			}
 		});
 
 		btnsGameControl = addButtonList("Game", "Start", "Quit", "Next Level");
-		btnsGameControl[0].setOnAction(e -> gameController.requestGame());
+		btnsGameControl[0].setOnAction(e -> gc.requestGame());
 		btnsGameControl[1].setOnAction(e -> ui.quitCurrentScene());
-		btnsGameControl[2].setOnAction(e -> gameController.cheatEnterNextLevel());
+		btnsGameControl[2].setOnAction(e -> gc.cheatEnterNextLevel());
 
 		btnsIntermissionTest = addButtonList("Intermission scenes", "Start", "Quit");
 		btnsIntermissionTest[0].setOnAction(e -> ui.startIntermissionScenesTest());
 		btnsIntermissionTest[1].setOnAction(e -> ui.quitCurrentScene());
 
-		spinnerGameLevel = addSpinner("Level", 1, 100, game.levelNumber);
+		spinnerGameLevel = addSpinner("Level", 1, 100, game().levelNumber);
 		spinnerGameLevel.valueProperty().addListener(($value, oldValue, newValue) -> ui.enterLevel(newValue.intValue()));
 
 		cbAutopilot = addCheckBox("Autopilot", ui::toggleAutopilot);
 		cbImmunity = addCheckBox("Player immune", ui::toggleImmunity);
 
-		addInfo("Game State", () -> fmtGameState(game, gameState));
-		addInfo("", () -> {
-			long ticked = gameState.timer().tick();
-			return String.format("Running:   %s%s", ticked, gameState.timer().isStopped() ? " (STOPPED)" : "");
-		});
-		addInfo("", () -> {
-			long remaining = gameState.timer().remaining();
-			String remainingText = remaining == TickTimer.INDEFINITE ? "indefinite" : String.valueOf(remaining);
-			return String.format("Remaining: %s", remainingText);
-		});
-		addInfo("Credit", () -> "%d".formatted(gameController.credit()));
-		addInfo("Playing", () -> U.yes_no(gameController.isGameRunning()));
 		addInfo("Game scene", () -> ui.getCurrentGameScene().getClass().getSimpleName());
-		addInfo("", () -> String.format("w=%.0f h=%.0f", ui.getCurrentGameScene().getFXSubScene().getWidth(),
+		addInfo("Game State", () -> "%s".formatted(gc.state()));
+		addInfo("", () -> "Running:   %s%s".formatted(gc.state().timer().tick(),
+				gc.state().timer().isStopped() ? " (STOPPED)" : ""));
+		addInfo("", () -> "Remaining: %s".formatted(ticksAsString(gc.state().timer().remaining())));
+
+		addInfo("Hunting timer",
+				() -> "%s #%d%s".formatted(gc.getHuntingTimer().getPhaseName(),
+						gc.getHuntingTimer().getScatteringPhase() != -1 ? gc.getHuntingTimer().getScatteringPhase()
+								: gc.getHuntingTimer().getChasingPhase(),
+						gc.getHuntingTimer().isStopped() ? " STOPPED" : ""));
+		addInfo("", () -> "Running:   %d".formatted(gc.getHuntingTimer().getTick()));
+		addInfo("", () -> "Remaining: %s".formatted(ticksAsString(gc.getHuntingTimer().getTicksRemaining())));
+
+		addInfo("Credit", () -> "%d".formatted(gc.credit()));
+		addInfo("Playing", () -> U.yes_no(gc.isGameRunning()));
+		addInfo("", () -> "w=%.0f h=%.0f".formatted(ui.getCurrentGameScene().getFXSubScene().getWidth(),
 				ui.getCurrentGameScene().getFXSubScene().getHeight()));
-		addInfo("Ghost speed", () -> fmtSpeed(game.level.ghostSpeed));
-		addInfo("Ghost speed (frightened)", () -> fmtSpeed(game.level.ghostSpeedFrightened));
-		addInfo("Ghost speed (tunnel)", () -> fmtSpeed(game.level.ghostSpeedTunnel));
-		addInfo("Ghost frightened time", () -> String.format("%d sec", game.level.ghostFrightenedSeconds));
-		addInfo("Pac-Man speed", () -> fmtSpeed(game.level.playerSpeed));
-		addInfo("Pac-Man speed (power)", () -> fmtSpeed(game.level.playerSpeedPowered));
-		addInfo("Bonus value", () -> game.bonusValue(game.level.bonusSymbol));
-		addInfo("Maze flashings", () -> game.level.numFlashes);
-		addInfo("Pellets", () -> String.format("%d of %d (%d energizers)", game.world.foodRemaining(),
-				game.world.tiles().filter(game.world::isFoodTile).count(), game.world.energizerTiles().count()));
+
+		addInfo("Pellets", () -> String.format("%d of %d (%d energizers)", game().world.foodRemaining(),
+				game().world.tiles().filter(game().world::isFoodTile).count(), game().world.energizerTiles().count()));
+		addInfo("Ghost speed", () -> fmtSpeed(game().level.ghostSpeed));
+		addInfo("Ghost speed (frightened)", () -> fmtSpeed(game().level.ghostSpeedFrightened));
+		addInfo("Ghost speed (tunnel)", () -> fmtSpeed(game().level.ghostSpeedTunnel));
+		addInfo("Ghost frightened time", () -> String.format("%d sec", game().level.ghostFrightenedSeconds));
+		addInfo("Pac-Man speed", () -> fmtSpeed(game().level.playerSpeed));
+		addInfo("Pac-Man speed (power)", () -> fmtSpeed(game().level.playerSpeedPowered));
+		addInfo("Bonus value", () -> game().bonusValue(game().level.bonusSymbol));
+		addInfo("Maze flashings", () -> game().level.numFlashes);
 	}
 
 	@Override
 	public void update() {
 		super.update();
 
-		var game = gameController.game();
-		var gameState = gameController.state();
-		var gameVariant = gameController.gameVariant();
+		comboGameVariant.setValue(gc.gameVariant());
+		comboGameVariant.setDisable(gc.isGameRunning());
 
-		comboGameVariant.setValue(gameVariant);
-		comboGameVariant.setDisable(gameController.isGameRunning());
-
-		cbAutopilot.setSelected(gameController.isAutoMoving());
-		cbImmunity.setSelected(gameController.isPlayerImmune());
+		cbAutopilot.setSelected(gc.isAutoMoving());
+		cbImmunity.setSelected(gc.isPlayerImmune());
 
 		// start game
-		btnsGameControl[0].setDisable(gameController.credit() == 0 || gameController.isGameRunning());
+		btnsGameControl[0].setDisable(gc.credit() == 0 || gc.isGameRunning());
 		// quit game
-		btnsGameControl[1].setDisable(gameState == GameState.INTRO || gameState == GameState.INTERMISSION_TEST);
+		btnsGameControl[1].setDisable(gc.state() == GameState.INTRO || gc.state() == GameState.INTERMISSION_TEST);
 		// next level
-		btnsGameControl[2].setDisable(!gameController.isGameRunning()
-				|| (gameState != GameState.HUNTING && gameState != GameState.READY && gameState != GameState.LEVEL_STARTING));
+		btnsGameControl[2].setDisable(!gc.isGameRunning() || (gc.state() != GameState.HUNTING
+				&& gc.state() != GameState.READY && gc.state() != GameState.LEVEL_STARTING));
 
 		// start intermission test
-		btnsIntermissionTest[0].setDisable(gameState == GameState.INTERMISSION_TEST || gameState != GameState.INTRO);
+		btnsIntermissionTest[0].setDisable(gc.state() == GameState.INTERMISSION_TEST || gc.state() != GameState.INTRO);
 		// quit intermission test
-		btnsIntermissionTest[1].setDisable(gameState != GameState.INTERMISSION_TEST);
+		btnsIntermissionTest[1].setDisable(gc.state() != GameState.INTERMISSION_TEST);
 
-		spinnerGameLevel.getValueFactory().setValue(game.levelNumber);
-		if (!gameController.isGameRunning()) {
+		spinnerGameLevel.getValueFactory().setValue(game().levelNumber);
+		if (!gc.isGameRunning()) {
 			spinnerGameLevel.setDisable(true);
 		} else {
 			spinnerGameLevel.setDisable(
-					gameState != GameState.READY && gameState != GameState.HUNTING && gameState != GameState.LEVEL_STARTING);
+					gc.state() != GameState.READY && gc.state() != GameState.HUNTING && gc.state() != GameState.LEVEL_STARTING);
 		}
-	}
-
-	private String fmtSpeed(float fraction) {
-		return String.format("%.2f px/sec", GameModel.BASE_SPEED * fraction);
-	}
-
-	private String fmtGameState(GameModel game, GameState gameState) {
-		var huntingPhaseName = game.inScatteringPhase() ? "Scattering" : "Chasing";
-		return gameState == GameState.HUNTING ? //
-				String.format("%s: Phase #%d (%s)", gameState, game.huntingPhase, huntingPhaseName) : gameState.name();
 	}
 }
